<resources>
    <string name="app_name">project3</string>
    <string name="action_settings">Settings</string>
    <string name="write_event_title">글 쓰기</string>

    <string name="write_event_body_label">글 내용</string>
    <string name="write_event_friend_label">친구 태그 변경</string>
    <string name="write_event_tag_label">태그 추가</string>

    <string name="friend_add_name">이름</string>
    <string name="friend_phone_number">전화번호</string>
    <string name="friend_memo">메모</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
