<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nobell.project3.ui.FriendAddFragment"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_add_name"
        android:id="@+id/friend_add_name_label"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_add_name_label"
        android:layout_marginBottom="24dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/friend_add_phone_number"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_below="@+id/friend_add_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_phone_number"
        android:id="@+id/friend_add_phone_number_label"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/friend_add_phone_number_body"
        android:layout_below="@+id/friend_add_phone_number_label"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_add_phone_number_body"
        android:text="@string/friend_memo"
        android:id="@+id/friend_add_memo_label"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_add_memo_label"
        android:layout_marginBottom="24dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/friend_add_memo_label_body"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/event_save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>
